@@ -2,9 +2,13 @@
 
 [BASIC]
 
+TEST_INT = 2
+
 test_minmax.min = 10
 
 [ADVANCED]
+
+TEST_INT = 3
 
 test_minmax.min = 20
 test_minmax.max = 30
@@ -12,6 +16,8 @@ test_minmax.max = 30
 [SUPER]
 
 ;test = 20
+
+TEST_INT = 4
 
 test_minmax.max = 0
 test_minmax.min = 0
