@@ -1,5 +1,6 @@
 2012-01-13
- * run_device
+ * --valuefile option
+ * run_device in scripts
  * array values (double_array, double_array_add) from script code
 
 2012-01-08
